Fix navbar collapse bug

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -5,6 +5,11 @@ body { padding-top: 70px; }
   .fa.pull-right { padding-top: 2px; }
 }
 
+.list-group {
+  i { margin-right: 10px; }
+  a:nth-child(1) i { margin-right: 15px; }
+}
+
 .ta-toolbar {
   background-color: #F0F0F0;
   padding: 10px 10px 5px;
